[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Characters/Fuses/StoneFuse.png" type="Texture" id=1]
[ext_resource path="res://Scripts/StoneBallFuse.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 20.3961

[sub_resource type="CircleShape2D" id=2]
radius = 250.0

[node name="StoneBallFuse" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Range" type="Area2D" parent="."]
position = Vector2( 0, -1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
shape = SubResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_StoneBallFuse_body_entered"]
[connection signal="body_entered" from="Range" to="." method="_on_Range_body_entered"]
[connection signal="body_exited" from="Range" to="." method="_on_Range_body_exited"]
